# fungine

./: .gitignore  README.md  brittany.yaml  fungine.cabal  loriandel.cabal  package.yaml  stack.yaml
app/: Main.hs  colors.css
app/Views/: Splash.hs
resources/shaders/: ui_fragment.glsl  ui_vertex.glsl
src/: Fungine.hs
src/FRP/: Behavior.hs
src/Fungine/: Command.hs  Component.hs  Error.hs  Input.hs  Prelude.hs  Window.hs
src/Fungine/Command/: Heartbeat.hs  Output.hs
src/Fungine/Component/: Container.hs  Image.hs  Opacity.hs
src/Fungine/Component/Layout/: Align.hs  AspectRatio.hs
src/Fungine/Graphics/: Geometry.hs  Measure.hs  Model.hs  RGBA.hs  Texture.hs
src/Fungine/Render/: Component.hs  GLFW.hs  Shader.hs  Window.hs
src/Fungine/Render/GLFW/: InputSystem.hs  WindowSystem.hs
test/: Spec.hs
