name:                loriandel
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/loriandel#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Durr
maintainer:          jmdurr@gmail.com
copyright:           2020 Jonathan Durr
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     FRP.Behavior
                     , Fungine
                     , Fungine.Error
                     , Fungine.Window
                     , Fungine.Render.Window
  build-depends:       base >= 4.7 && < 5
                     , protolude >= 0.2 && < 0.3
                     , GLFW-b >= 3.2 && < 3.3
                     , stm >= 2.5 && < 2.6
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable loriandel-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , loriandel
                     , protolude >= 0.2 && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite loriandel-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , loriandel
                     , protolude >= 0.2 && < 0.3
                     , hspec >= 2.7 && < 2.8
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/jmdurr/loriandel
